@@ -1,5 +1,7 @@
 1.71
 	1. Fixed the Ace::Sequence _make_filter() function to respect the value of automerge()
+	2. Made it possible to change the color of introns and exons depending on curation status
+		(will need more work)
 1.70	3/5/2001
 	1. Folded AceBrowser functionality into package.
 	2. Added GD graphics.
